k8s/kibana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
spec:
  type: NodePort
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
      nodePort: 30001
