k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000

          - path: /socket.io/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000

          - path: /kibana/
            pathType: Prefix
            backend:
              service:
                name: kibana-service
                port:
                  number: 5601
